# RayTracing

./: CMakeLists.txt  README.md
output/: scene_1.ppm  scene_1z.ppm  scene_2.ppm  scene_2z.ppm
scenes/: scene_1.xml  scene_2.xml
src/: CMakeLists.txt  config.h  main.cpp
src/cameras/: Camera.cpp  Camera.h
src/core/: ImagePlane.cpp  ImagePlane.h  Ray.h  Render.h  SceneNode.cpp  SceneNode.h  Transformation.cpp  Transformation.h
src/core/lights/: Ambient.cpp  Ambient.h  Directional.cpp  Directional.h  ILight.h  Light.h  Point.cpp  Point.h
src/core/materials/: Blinn.cpp  Blinn.h  IMaterial.h  Material.h  Phong.cpp  Phong.h
src/core/meshes/: IMesh.h  Sphere.cpp  Sphere.h
src/math/: cyColor.h  cyMath.h  cyPoint.h
src/xml/: LoadXml.cpp  LoadXml.h  ParseUtils.cpp  ParseUtils.h
